[project]
name = "atp-target-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "ycb",email = "yechengbo@miya818.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-json-report (>=1.5.0,<2.0.0)"
]
